<resources>
    <string name="app_name">playAndroid</string>
    <string name="title_home">首页</string>
    <string name="title_system">体系</string>
    <string name="title_wx">公众号</string>
    <string name="title_demo">项目</string>
    <string name="title_mine">我的</string>

    <string name="main_menu_hot">最热</string>
    <string name="main_menu_seach">搜索</string>

    <string name="jump_to_main">跳过</string>
    <string name="main_title">玩Android</string>
    <string name="home_pager">首页</string>
    <string name="knowledge_hierarchy">知识体系</string>
    <string name="tab_project">项目</string>
    <string name="tab_mine">我的</string>
    <string name="data_loading">加载中...</string>
    <string name="data_load_error">加载失败,请重试~</string>
    <string name="exit_system">再按一次退出</string>
    <string name="web_view">WebView</string>
    <string name="project">项目</string>
    <string name="hot">热门</string>
    <string name="hot_title">热门网站</string>
    <string name="reload_content">重新加载</string>
    <string name="share_title">分享</string>
    <string name="like_title">收藏</string>
    <string name="already_collect_title">已收藏</string>
    <string name="load_more_no_data">没有更多数据了~</string>
    <string name="no_more_data">暂时还没有数据~</string>
    <string name="please_enter_username">请输入用户名</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_reenter_password">请再次输入密码</string>
    <string name="register">注  册</string>
    <string name="no_account_register">还没账号?点此注册</string>
    <string name="login">登  录</string>
    <string name="click_head_login">点击头像登录</string>
    <string name="my_collect">我的收藏</string>
    <string name="wx_list">微信公众号</string>
    <string name="my_todo">todo工具</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="logout_sure">确定要退出登录吗?</string>
    <string name="clear_history">清空历史记录</string>
    <string name="delete_history_sure">确定要删除历史记录吗?</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="hot_search">热搜</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="search_title">Search</string>
    <string name="input_search_content">输入你想查询的内容..</string>
    <string name="hot_address">常用网站</string>
    <string name="username_incorrect">用户名或密码长度必须大于6位</string>
    <string name="password_incorrect">两次输入的密码不一致</string>
    <string name="register_ok">注册成功,请您登陆</string>
    <string name="auto_login_ok">自动登陆成功</string>
    <string name="login_ok">登陆成功</string>
    <string name="login_err">登陆失败</string>
    <string name="logout_ok">退出成功</string>
    <string name="todo_err_msg">将在后续以 kotlin mvp app 的方式展示</string>
    <string name="please_login">请先登录</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <string name="float_button">cn.white.ymc.wanandroidmaster.util.behavior.FabScrollBehavior</string>
    <string name="bottom_bervaior">cn.white.ymc.wanandroidmaster.util.behavior.BottomNavigationBehavior</string>

    <!-- 听写 -->
    <string name="app_id">5c7ddc7a</string>
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
</resources>
