<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_home"
        android:title="@string/title_home"
        android:icon="@mipmap/ic_main_home">
    </item>

    <item
        android:id="@+id/item_hierarchy"
        android:title="@string/title_system"
        android:icon="@mipmap/ic_main_hierarchy">
    </item>

    <item
        android:id="@+id/time_wechat"
        android:title="@string/title_wx"
        android:icon="@mipmap/ic_main_weixin">
    </item>

    <item
        android:id="@+id/item_project"
        android:title="@string/title_demo"
        android:icon="@mipmap/ic_main_project">
    </item>

    <item
        android:id="@+id/item_mine"
        android:title="@string/title_mine"
        android:icon="@mipmap/ic_main_mine">
    </item>

</menu>